--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+html{
+  font-size: 10px;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +13,11 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+
+@media (max-width:600px)  {
+  html{
+    font-size: 8.5px;
+  }
 }
