--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
-
-
 @import url("./StyleSheet/GlobleStyle.css");
+
+
+.app-container {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
