--- a/src/Components/HeaderNavbar/HeaderNavbar.css
+++ b/src/Components/HeaderNavbar/HeaderNavbar.css
@@ -1,4 +1,11 @@
+.header-sticky{
+    position:sticky;
+    top: 0;
+    left: 0;
+   
+}
 .header-container{
+    width: 100%;
     height: 7rem;
     background-color:#81D4FA  ;
     box-shadow: 1px 4px 12px grey; 
@@ -7,11 +14,12 @@
     align-items: center;
     padding: 0 3rem;
     box-sizing: border-box;
-}
+   
+   }
+
 ul{
     display: flex;
     position: relative;
-    /* transform: translateX(0); */
 
 }
 .nav-style{
@@ -20,17 +28,22 @@ ul{
    list-style: none;
    margin: .8rem;
    padding: .2rem;
+   color: blue;
 }
 .nav-link-name{
     display: inline;
 }
 .toggle-btn{
-    position:fixed;
+    position:absolute;
     top: 1.5rem;
     right: 20px;
     display: none;
     font-size: 3rem;
+    z-index: 10;
     
+}
+.action{
+    display: none;
 }
 
 
@@ -48,8 +61,10 @@ ul{
     top: 0rem  ;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 60%;
+    min-height: 35rem;
     background-color: rgb(200, 216, 211);
+    opacity: 0.986;
    }
     .nav-style{
         text-decoration: none; 
@@ -63,7 +78,6 @@ ul{
 }
 .act{
     display: none;
-    transition: all 1s linear;
 }
 
     
