--- a/src/StyleSheet/GlobleStyle.css
+++ b/src/StyleSheet/GlobleStyle.css
@@ -1,9 +1,47 @@
-.btn-glob{
-    padding: .4rem 1.3rem;
+/* tags */
+h1{
+    font-size: 2.5rem;
+    margin: .3rem;
+}
+h2{
+    font-size: 2.2rem;
+    margin: .3rem;
+}
+h3{
     font-size: 2rem;
-    background-color: turquoise;
+    margin: .3rem;
+    font-weight: 400;
+}
+h4{
+    font-size: 1.8rem;
+    margin: .3rem;
+    font-weight: 400;
+}
+h5{
+    font-size: 1.5rem;
+    margin: .3rem;
+    font-weight: 400;
+}
+h6{
+    font-size: 1.1rem;
+    margin: .3rem;
+    font-weight: 400;
+}
+P{
+    font-size: 1.5rem;
+    margin: .3rem;
+}
+a{
+    margin: .3rem;
+}
+
+.btn-glob{
+    padding: .4rem 1.8rem;
+    font-size: 2rem;
+    background-color: transparent;
     border-style: none;
     border-radius: 3px;
+    color: blue;
 }
 .btn-glob:hover{
     background-color:rgb(0, 170, 255);
@@ -25,7 +63,11 @@ justify-content: space-between;
 input{
     margin: 1.5rem .5rem;
     padding: .3rem;
-   
     border: 1px solid black;
     outline: none;
+    width: 40vw;
+    max-width: 30rem;
+   min-height: 2.2rem;
+   
 }
+
