--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
-html{
+html {
   font-size: 10px;
+  min-height: 100vh;
 }
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -8,6 +10,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  flex-direction: column;
 }
 
 code {
@@ -16,8 +20,8 @@ code {
 }
 
 
-@media (max-width:600px)  {
-  html{
+@media (max-width:600px) {
+  html {
     font-size: 8.5px;
   }
 }
